# SimpleLArG4

./: .gitignore  CMakeLists.txt  Makefile  README.md  SimpleLArG4.cc  lartpc.cc  run.mac  run_cosmic.mac
include/: CosmicGenerator.hh  DetectorConstruction.hh  EventAction.hh  EventRecord.hh  LinkDef.h  MARLEYGenerator.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: MARLEYToROOT.C  Scratch.C  runMARLEYToROOT.py
src/: CosmicGenerator.cc  DetectorConstruction.cc  EventAction.cc  EventRecord.cc  MARLEYGenerator.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
